rakuten/enforce-compression-algorithm/enforce-compression-algorithm.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
    annotations:
        policies.kyverno.io/category: Rakuten CNS
        policies.kyverno.io/description: This policy ensures that StorageClass objects named 'robin' have the compression algorithm set to 'LZ4', except in the default namespace.
        policies.kyverno.io/severity: medium
        policies.kyverno.io/subject: StorageClass
        policies.kyverno.io/title: Enforce StorageClass Compression
    name: enforce-storageclass-compression
spec:
    background: true
    rules:
        - name: check-compression-algorithm 
          match:
            any:
            - resources:
                kinds:
                - StorageClass
                names:
                - robin*
          validate:
            message: StorageClass 'robin' must have compression algorithm set to 'LZ4'
            pattern:
                parameters:
                    compression: LZ4
    validationFailureAction: Enforce
