rakuten/enforce-compression-algorithm/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: enforce-storageclass-compression
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../enforce-compression-algorithm.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: enforce-storageclass-compression
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: storageclass-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: storageclass-bad.yaml
